margin and spacing fixes

--- a/tf-style.css
+++ b/tf-style.css
@@ -42,6 +42,7 @@ a:hover {
 .stats {
     padding-right: 1em;
     line-height: 0px;
+    margin-top: 50px;
 }
 
 #stars {
@@ -73,9 +74,9 @@ a:hover {
     background-color: #ffeeee;
 }
 #footer {
-    line-height: 3em;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    line-height: 4em;
+    margin-top: 30px;
+    margin-bottom: 20px;
     width: 100%;
     border-top: 1px solid #D2D2D2;
     min-height: 46px;
